app/src/test/resources/programs/valid/foonctions/constantFunction.extension
foo g() -> Int = {
    3
}

foo main() -> Int = {
    g()
}
