app/src/test/resources/programs/invalid/foonctions/incompatibleReturnType.extension
foo g() -> Int = {
    ()
}

foo main() -> Int = {
    g()
}
